tests/fixtures/Mocks/InvalidFoo/BadListener.php
<?php declare(strict_types = 1);

namespace Tests\Fixtures\Mocks\InvalidFoo;

final class BadListener
{

}
